--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Neo4j Browser</title>
+    <title>电信研究院 - 推荐系统</title>
     <style>
       * {
         padding: 0;
